--- a/style.css
+++ b/style.css
@@ -749,7 +749,7 @@ h6 {
     z-index: 1;
 }
 
-.clients__text:before{
+.clients__text:before {
     content: '';
     display: block;
     width: 60px;
@@ -759,3 +759,147 @@ h6 {
     background-color: #f38181;
 
 }
+
+
+.blogs {
+    display: flex;
+    justify-content: space-between;
+}
+
+.blogs__header {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.blogs__title {
+    margin-bottom: 14px;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+
+}
+
+.blogs__title a {
+
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: inherit;
+    text-decoration: none;
+
+}
+
+.blogs__title a:hover {
+    text-decoration: underline;
+}
+
+.blogs__text {
+
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.blogs__item {
+    width: 31%;
+}
+
+.blogs__date {
+    position: absolute;
+    bottom: 15Px;
+    left: -5px;
+    background-color: #95e1d3;
+    text-align: center;
+    padding: 15px;
+}
+
+.date__day {
+    font-family: Montserrat;
+    font-size: 30px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.date__mounth {
+    font-size: 15px;
+    font-family: "Roboto Light";
+    font-weight: 300;
+    color: #ffffff;
+
+}
+
+.blog__content {
+    margin-bottom: 10px;
+}
+
+.blogs-stat {
+    border-top: 1px solid #e5e5e5;
+    padding-top: 14px;
+    color: #999999;
+    font-family: "Roboto - Light Italic";
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.blog-stat__item {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+}
+
+.fa-comment-dots {
+    color: #95e1d3;
+}
+
+.fa-eye {
+    color: #95e1d3;
+}
+
+.map {
+    text-align: center;
+}
+
+.map h2{
+    font-size: 24px;
+    color: #f38181;
+    font-weight: 700;
+    text-transform: uppercase;
+
+}
+
+.map__tittle a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.map a{
+text-decoration: none;
+color: #f38181;
+}
+
+.map a:hover {
+    color: inherit;
+    text-decoration: underline;
+}
+
+
+.map__title:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 15px auto;
+
+    background-color:#f38181;
+}
+
+.section--map{
+    background: #e6e6e6 url(img/map/open_map.png) center no-repeat / cover;
+    padding: 40px 0;
+   
+}
+
