--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ h6 {
 /* Container */
 .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1230px;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
@@ -288,61 +289,91 @@ h6 {
     line-height: 24px;
 }
 
-.about {
+.card {
+    margin: 80px -15px 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 80px;
 }
 
-.about__item {
-    width: 380px;
-
+.card__item {
+    width: 33.33333%;
+    padding: 0 15px;
 }
 
-
-.about__inner {
-    background-color: #95e1d3;
+.card__inner {
     position: relative;
+    background-color: #95e1d3;
 }
 
-.about__item:hover .about__img {
+.card__inner:hover .card__img {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.about__item:hover .about__img img {
-    opacity: 0.1;
+.card__inner:hover .card__img img {
+    opacity: .1;
 }
 
-.about__img {
-    background: linear-gradient(to bottom, #e78081, #e9d282);
-    transition: transform 0.2s linear;
+.card__inner:hover .card__text {
+    opacity: 1;
 }
 
-.about__img img {
+.card__img {
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+
+    transition: transform .2s linear;
+}
+
+.card__img img {
     display: block;
-    transition: opacity 0.2s linear;
+    max-width: 100%;
+    height: auto;
+    transition: opacity .1s linear;
 }
 
-.about__text {
-    color: #fff;
+.card__text {
     width: 100%;
-    font-family: Montserrat;
+
     font-size: 18px;
-    font-weight: 700;
+    color: #fff;
     text-transform: uppercase;
+    font-weight: 700;
     text-align: center;
+    opacity: 0;
+
     position: absolute;
     top: 50%;
     left: 0;
     z-index: 2;
     transform: translate3d(0, -50%, 0);
-    opacity: 0;
-    transition: opacity 0.1s linear;
+
+    transition: opacity .2s linear;
 }
 
-.about__item:hover .about__text {
-    opacity: 1;
+.card__info {
+    margin-top: 20px;
+
+    text-align: center;
 }
+
+.card__name {
+    margin-bottom: 5px;
+
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+}
+
+.card__prof {
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 300;
+    color: #999;
+}
+
+
+
+
 
 .statistics {
     background-color: #95e1d3;
@@ -350,6 +381,7 @@ h6 {
 
 .stat {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .stat__item {
@@ -383,13 +415,22 @@ h6 {
 
 .services {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .services__item {
-    flex: 1 1 0;
-    padding-left: 85px;
+    width: 33.3333333%;
+
+
+    padding: 0 35px 40px 85px;
+
     position: relative;
-    padding-right: 35px;
+
+    margin-bottom: 40px;
+}
+
+.services__item--border {
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .services__icon {
@@ -425,6 +466,7 @@ h6 {
 
 .devices__item {
     display: block;
+    max-width: 100%;
 }
 
 .devices__item--iphone {
@@ -438,10 +480,20 @@ h6 {
 
 .wedo {
     display: flex;
+    margin: 0 -15px;
+    flex-wrap: wrap;
 }
 
 .wedo__item {
     width: 50%;
+    padding: 0 15px;
+}
+
+.wedo__img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+
 }
 
 /*accordeon*/
@@ -929,7 +981,7 @@ h6 {
     font-weight: 400;
     line-height: 24px;
     padding-bottom: 30px;
-    padding-right: 5px; 
+    padding-right: 5px;
 
 }
 
@@ -1068,56 +1120,228 @@ h6 {
     line-height: 24px;
 }
 
-.footer__blogs__img{
+.footer__blogs__img {
     width: 120px;
     height: 80px;
 }
 
-.footer__blogs__item{
-display: flex;
-margin-bottom: 30px;
-align-items: center;
+.footer__blogs__item {
+    display: flex;
+    margin-bottom: 30px;
+    align-items: center;
 }
 
-.blogs__content{
+.blogs__content {
     padding-left: 20px;
 }
 
-.footer__blogs__title__link:hover{
+.footer__blogs__title__link:hover {
     text-decoration: underline;
 }
 
-.inst__item{
+.inst__item {
     flex: 1 1 0;
-    
+
     width: 32.3333333%;
 
     border-bottom: 1px solid #fff;
 }
 
 
-.inst__item img{
+.inst__item img {
     display: block;
-   
-     
-   
+
+
+
 }
 
-.instagram{
+.instagram {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.copyright{
+.copyright {
 
     border-top: 1px solid #e5e5e5;
-    padding:20px 0;
+    padding: 20px 0;
     color: #333333;
-font-family: Montserrat;
-font-size: 14px;
-font-weight: 400;
-text-align: center;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.img__logos {
+    width: 100%;
+    max-width: 1200px;
+    ;
 }
 
 
+@media(max-width: 1230px) {
+    .intro__title {
+        font-size: 120px;
+    }
+
+    .intro__suptitle {
+        font-size: 52px;
+    }
+}
+
+
+
+
+@media(max-width: 990px) {
+    .intro__title {
+        font-size: 80px;
+    }
+
+    .intro__suptitle {
+        font-size: 32px;
+    }
+
+    .stat {
+        justify-content: center;
+    }
+
+    .stat__item {
+        flex: none;
+        width: 33.33333%;
+        border: 0;
+        padding-top: 30px;
+
+    }
+
+    .stat__item:last-child {
+        border-right: 0;
+    }
+
+    .services__item {
+        width: 50%;
+    }
+
+    .services__item--border {
+        border-bottom: 0;
+    }
+}
+
+
+@media(max-width: 770px) {
+    .nav {
+        display: none;
+    }
+
+    .slider__text {
+        display: none;
+    }
+
+    .slider__item.active:before {
+        width: 50%;
+
+    }
+
+    .section {
+        padding: 40px 0;
+    }
+
+    .section--devices {
+        padding-bottom: 0;
+    }
+
+    .card__item {
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+
+    }
+
+    .card__item:last-child {
+        margin-bottom: 0;
+    }
+
+    .card {
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+    .services {
+        justify-content: center;
+    }
+
+    .services__item {
+        width: 100%;
+        max-width: 400px;
+        padding-left: 55px;
+        padding-right: 0;
+    }
+
+    .services__icon {
+        left: 0;
+    }
+
+    .wedo__img {
+        display: none;
+    }
+
+    .wedo__item {
+        width: 100%;
+    }
+
+
+
+}
+
+
+
+@media(max-width: 575px) {
+    .intro__title {
+        font-size: 40px;
+    }
+
+    .intro__suptitle {
+        font-size: 22px;
+
+
+    }
+
+    .section__title {
+        font-size: 24px;
+    }
+
+    .section__title:after {
+        margin: 20px auto;
+    }
+
+    .section__header {
+        margin-bottom: 50px;
+    }
+
+    .section__subtitle {
+        font-size: 20px;
+    }
+
+
+    .stat__item {
+        width: 100%;
+        border-bottom: 1px solid #b5eae0;
+    }
+
+    .stat__item:last-child {
+        border-bottom: 0;
+    }
+
+    .stat__count {
+        font-size: 52px;
+    }
+
+    .devices {
+        max-width: 320px;
+    }
+
+    .devices__item--iphone {
+        width: 180px;
+        bottom: -50px;
+        right: -80px;
+    }
+}
