--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ h6 {
     background: url("img/intro-bcg.png") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
+    min-height: 820px;
+    position: relative;
 }
 
 .intro__inner {
@@ -1415,6 +1417,10 @@ h6 {
         width: 100%;
     }
 
+    .intro{
+        min-height: 650px;
+    }
+
 }
 
 
@@ -1521,6 +1527,7 @@ h6 {
 .footer__blogs__title__link{
     font-size: 10px;
 }
+
 
 
 }
