--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ hr {
     margin: 40px 0;
 }
 
-.page{
+.page {
     overflow: hidden;
 }
 
@@ -104,6 +104,22 @@ h6 {
     z-index: 1000;
 }
 
+.header.fixed {
+    background-color: #eb8b8d;
+    box-shadow: 0 3px 10px rgb(0, 0, 0, .2);
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+
+    transform: translate3d(0, 0, 0)
+}
+
+.header.active {
+    background-color: #eb8b8d;
+}
+
 .header__inner {
     display: flex;
     justify-content: space-between;
@@ -163,6 +179,87 @@ h6 {
 .nav__link.active {
     color: #fce38a;
 }
+
+.nav-toggle {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+    width: 30px;
+
+    font-size: 0;
+    color: transparent;
+    border: 0;
+    background: none;
+    cursor: pointer;
+
+    padding: 15px 0;
+    display: none;
+}
+
+.nav-toggle.active .nav-toggle__item {
+    background: none;
+
+
+}
+
+.nav-toggle.active .nav-toggle__item:before {
+    transform-origin: left top;
+    transform: rotate(45deg) translate3d(0px, -2px, 0);
+}
+
+.nav-toggle.active .nav-toggle__item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg) translate3d(0px, 3px, 0);
+}
+
+
+
+.nav-toggle__item {
+    width: 100%;
+    height: 3px;
+    display: block;
+
+    background-color: #fff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+
+    transition: background .2s linear;
+
+
+}
+
+.nav-toggle__item:before,
+.nav-toggle__item:after {
+    content: '';
+    width: 100%;
+    height: 3px;
+
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    z-index: 1;
+
+    transition: transform .2s linear;
+}
+
+
+
+.nav-toggle__item:before {
+    content: '';
+    top: -8px;
+}
+
+.nav-toggle__item:after {
+    content: '';
+    top: 8px;
+
+}
+
 
 .btn {
     display: inline-block;
@@ -238,7 +335,7 @@ h6 {
 
 .section {
     padding: 80px 0;
-    
+
 }
 
 .section--gray {
@@ -1310,8 +1407,29 @@ h6 {
 
 
 @media(max-width: 770px) {
+    .header {
+        padding: 10px 0;
+    }
+
+
     .nav {
         display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        padding: 8px 20px;
+
+        background-color: #eb8b8d;
+    }
+
+    .nav__link {
+        display: block;
+    }
+
+    .nav-toggle {
+        display: block;
     }
 
     .slider__text {
@@ -1417,7 +1535,7 @@ h6 {
         width: 100%;
     }
 
-    .intro{
+    .intro {
         min-height: 650px;
     }
 
@@ -1519,14 +1637,15 @@ h6 {
     .subscribe__btn {
         width: 100%;
     }
-.footer__blogs__img{
-    height: 50px;
-    width: 80px;
-}
 
-.footer__blogs__title__link{
-    font-size: 10px;
-}
+    .footer__blogs__img {
+        height: 50px;
+        width: 80px;
+    }
+
+    .footer__blogs__title__link {
+        font-size: 10px;
+    }
 
 
 
