--- a/style.css
+++ b/style.css
@@ -197,6 +197,10 @@ h6 {
     display: none;
 }
 
+.nav-toggle:focus{
+    outline: 0;
+}
+
 .nav-toggle.active .nav-toggle__item {
     background: none;
 
@@ -1429,6 +1433,10 @@ h6 {
     }
 
     .nav-toggle {
+        display: block;
+    }
+
+    .nav.active {
         display: block;
     }
 
